--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "dayjs": "1.11.10",
-    "formik": "2.2.9",
     "lodash": "4.17.21",
     "react": "latest",
     "react-dom": "latest",
-    "typescript": "latest",
-    "yup": "1.0.2"
+    "typescript": "latest"
   },
   "description": "https://github.com/mui/material-ui/blob/v5.13.6/docs/data/material/components/dialogs/SimpleDialog.tsx",
   "devDependencies": {
